<resources>
    <string name="app_name">represent</string>
    <string name="represent_">Represent!</string>
    <string name="find_your_r">Find your representatives</string>
    <string name="enter_your_">Search an Address</string>
    <string name="your_distri">Your district representative is [Person A] who is a member of the [D/R/I] party.</string>
    <string name="your_state_1">Your state representative is [Person A] who is a member of the [D/R/I] party.</string>
    <string name="your_state_2">Your state representative is [Person A] who is a member of the [D/R/I] party.\n\n</string>
    <string name="black_lives">Black Lives Matter</string>
    <string name="bio">Your [district/state] representative is [Person A] who is a member of the [D/R/I] party.\n\n</string>
    <string name="website">www.theirwebsite.gov</string>
    <string name="phone">(888) 123-4567</string>
    <string name="twitter">their_name</string>
    <string name="youtube">Follow on YouTube</string>
    <string name="facebook">Find Me on Facebook</string>
    <string name="office_senator">U.S. Senator</string>
    <string name="office_district">U.S. Representative</string>
    <string name="division_district">Congressional District</string>
    <string name="division_senator">State</string>
    <string name="full_name">Full Name</string>
</resources>